ALignment Corrected

--- a/src/Styles/workoutPlan.css
+++ b/src/Styles/workoutPlan.css
@@ -7,14 +7,17 @@
   text-align: center;
   padding: 50px;
 }
+
 #drop {
   width: 112px;
   margin-left: 0px;
   padding-left: 0px;
 }
+
 #text {
   padding-right: 180px;
 }
+
 .Plan {
   padding: 30px;
   display: flex;
@@ -39,40 +42,67 @@
   font-size: 22px;
 }
 
-.days {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 10px 44px;
+.table-box {
+  margin: 50px auto;
 }
-.exe {
-  justify-content: space-around;
-  padding: 0px 0px;
-  width: 88.5%;
-  margin: 2px 70px;
-  border-radius: 25px;
+
+.table-row {
+  display: table;
+  width: 80%;
+  margin: 10px auto;
+  font-family: "Poppins", sans-serif;
+  background: transparent;
+  padding: 12px 0;
+  color: #555;
+  font-size: 13px;
+  box-shadow: 0 1px 4px 0px rgba(0, 0, 50, 0.3);
+  border-radius: 10px;
+  width: 85%;
+}
+
+.table-head {
+  box-shadow: none;
+  color: #fff;
+  font-weight: 600;
+}
+
+/* .table-head .table-cell{
+    border-right: none;
+} */
+.table-cell {
+  display: table-cell;
+  width: 10%;
+  text-align: center;
+  padding: 4px 0;
+  border-right: 1px solid #d6d4d4;
+  vertical-align: middle;
+}
+
+.table-cell p {
+  margin: 0.8rem 0;
+  font-size: 16px;
+}
+
+.last-cell {
+  border-right: none;
+}
+
+.cont2{
+  background-color: #0b5ed7;
 }
 
 .bg {
-  background: linear-gradient(
-    144.39deg,
-    #ffffff -278.56%,
-    #6d6d6d -78.47%,
-    #11101d 96.61%
-  );
+  background: linear-gradient(144.39deg,
+      #ffffff -278.56%,
+      #6d6d6d -78.47%,
+      #11101d 96.61%);
 }
 
-.days p {
-  padding: 10px 30px;
-  margin: 10px;
-  font-size: 18px;
-}
-
-.gym{
+.gym {
   padding: 30px 10px;
 }
 
-.notes{
+.notes {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -81,24 +111,19 @@
   border-radius: 25px;
 }
 
-.days .line{
-  height: 65px;
-  width: 3px;
-  background-color: white;
-}
-.bigline{
+.bigline {
   height: 310px;
   width: 4px;
   background-color: white;
 }
 
-.back{
+.back {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.back a{
+.back a {
   margin: 20px;
   text-decoration: none;
   color: white;
@@ -108,6 +133,6 @@
   border-radius: 10px;
 }
 
-.video{
-  margin:  10px 20px;
+.video {
+  margin: 10px 20px;
 }
